# qf5214_team11

./: .gitattributes  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  code for Dash.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
Data/: news.json  news.jsonl  news_score.csv  top50_traded_stock_news.csv
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
qf5214_team11/: 11_2.py  API_panel.py  DataProcessing.py  KafkaWorker.py  __init__.py  batch.py  cli.py  config.py  createDatabase.py  getMarketData.py  getNews.py  openai_text.py  qf5214_team11.py  spark.py
qf5214_team11/API/: alpha_vantage_exploration.ipynb
tests/: API_panel.py  __init__.py  akshare_read_data.ipynb  test_qf5214_team11.py  us_stock_20240401_20240406_1.csv  us_stock_20240401_20240406_2.csv  us_stock_20240401_20240406_total.csv
