[tool.poetry]
name = "qf5214-team11"
version = "0.1.0"
description = ""
authors = ["kk-hue <70795164+kk-hue@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "qf5214_team11"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
mysql-connector-python = "^8.3.0"
ipython = "^8.23.0"
kafka-python = "^2.0.2"
pandas = "^2.2.2"
kafka = "^1.3.5"
sqlalchemy = "^2.0.29"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
